--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,13 @@
 
 body{
     font-family: 'Asap', sans-serif;
+    background-color: #f5f5f5;
 }
 
 #cabecalho{
     width: 100%;
     height: 650px;
-    background: url(../images/fundo4.jpg);
+    background: url(../images/fundo4.jpeg);
     background-repeat: no-repeat;
     background-position: 80% 10%;
     background-attachment: fixed;
@@ -73,19 +74,21 @@ nav ul li a{
 }
 
 .imagem_comeco {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
 }
 
 .texto_comeco{
-    margin-top: -30px;
+    margin-top: -40px;
     margin-left: 10px;
+    text-align: center;
     color: #fff;
 }
 
 #sobre {
     width: 100%;
-    margin-top: 50px;
+    margin-top: 80px;
+    margin-bottom: 60px;
     display: flex;
     justify-content: center;
 }
@@ -97,10 +100,112 @@ nav ul li a{
 .titulos {
     font-family: 'Playfair Display', serif;
     font-size: 30px;
+    text-align: center;
     line-height: 50px;
 }
 
 .textos{
     font-size: 15px;
-    line-height: 20px;
+    text-align: center;
+    line-height: 27px;
+}
+
+#servicos {
+    width: 100%;
+    
+}
+
+.servicos{
+    display: flex;
+    justify-content: center;
+}
+
+.servico {
+    width: 17%;
+    background-color: #fff;
+    margin: 10px 10px;
+    -webkit-box-shadow: 0px 10px 12px 0px rgba(0, 0, 0, 0.32);
+    -moz-box-shadow:    0px 10px 12px 0px rgba(0, 0, 0, 0.32);
+    box-shadow:         0px 10px 12px 0px rgba(0, 0, 0, 0.32);
+}
+
+.imagem_servico{
+    width: 230px;
+    height: auto;
+    justify-content: center;
+}
+
+.texto_servico{
+    margin-top: 10px;
+    line-height: 25px;
+    margin-left: 10px;
+}
+
+.botao_servico{
+    background-color: #fff;
+    border: none;
+    padding: 0px;
+    font-size: 15px;
+    margin-top: 10px;
+    margin-left: 10px;
+    padding-bottom: 10px;
+    text-decoration: underline #616161;
+}
+
+#localizacao {
+    margin-top: 70px;
+    background-color: #fff;
+    display: flex;
+}
+
+#endereco {
+    padding-top: 100px;
+    padding-left: 50px;
+    text-align: left;
+}
+
+.titulo_endereco {
+    font-family: 'Playfair Display', serif;
+    font-size: 30px;
+    line-height: 50px;
+}
+
+.textos_endereco{
+    font-size: 15px;
+    line-height: 27px;
+    padding-bottom: 30px;
+}
+
+footer {
+    width: 100%;
+    background-color: #000;
+    color: #f3f3f3;
+    margin-top: -1px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.redes_sociais{
+    width: 30%;
+    float: left;
+    margin-left: 60px;
+    margin-top: 30px;
+}
+
+.menu_footer{
+    width: 40%;
+    float: right;
+    margin-left: -60px;
+    margin-top: 30px;
+}
+
+.botoes_footer{
+    line-height: 35px;
+}
+
+.titulos_footer{
+
+    font-size: 23px;
+    line-height: 30px;
 }
